@@ -23,4 +23,5 @@ public abstract class Constants {
     public final static String NS_DIRECT_OUTPUT_SERVICE = "http://www.pustefix-framework.org/2008/namespace/direct-output-service-config";
     public final static String NS_CONTEXT_XML_SERVICE = "http://www.pustefix-framework.org/2008/namespace/context-xml-service-config";
     public final static String NS_XML_GENERATOR = "http://www.pustefix-framework.org/2008/namespace/xml-generator-config";
+    public final static String EXTENSION_POINT_DEFAULT_STATIC_RESOURCES = "org.pustefixframework.http.DocrootRequestHandler.defaultExtensionPoint";
 }
